--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,14 @@
     <title>DsMovie</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Olá DsMovie</h1>
+    <h3>Promoção</h3>
+    <h3>Agenda de Filmes</h3>
 </body>
 </html>
