Barra superior Parte 2

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,10 @@
    <header>
        <nav class="container">
            <h1>DSMovie</h1>
+           <div>
+           <img src="img/Github.svg" alt="">
            <a href="https://github.com/KarinaSouzas">/Karina Souza</a>
+           </div>
        </nav>
    </header>
 </body>
