--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,25 @@
    <header>
        <nav class="container">
            <h1>DSMovie</h1>
-           <div>
+           <div class="DsMovie-contact-container">
            <img src="img/Github.svg" alt="">
            <a href="https://github.com/KarinaSouzas">/Karina Souza</a>
            </div>
        </nav>
    </header>
+
+   <main>
+        <section id="DsMovie-card-list" class="container">
+            <div class="DsMovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                <div class="DsMovie-card-description">
+                    <h3>The Witcher</h3>
+                    <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+
+        </section>
+
+   </main>
 </body>
 </html>
