--- a/Index.html
+++ b/Index.html
@@ -22,16 +22,122 @@
 
    <main>
         <section id="DsMovie-card-list" class="container">
-            <div class="DsMovie-card">
-                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
-                <div class="DsMovie-card-description">
-                    <h3>The Witcher</h3>
-                    <a class="DsMovie-btn" href="form.html">Avaliar</a>
+
+            <div class="row">
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">
+                    <div class="DsMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
+                        <div class="DsMovie-card-description">
+                            <h3>The Witcher</h3>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div> 
                 </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">
+                    <div class="DsMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/41yaWnIT8AjIHiULHtTbKNzZTjc.jpg" alt="The Flash">
+                        <div class="DsMovie-card-description">
+                            <h3>The Flash</h3>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div> 
+                </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/dK12GIdhGP6NPGFssK2Fh265jyr.jpg" alt="Alerta Vermelho">
+                        <div class="DsMovie-card-description">
+                            <h3>Alerta Vermelho</h3>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div> 
+                </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/mX3WOJPBzzl4kj4xU5lL7qfD6C3.jpg" alt="Batman">
+                        <div class="DsMovie-card-description">
+                            <h3>Batman vs Superman: A Origem da Justiça</h3>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div> 
+                </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/en971MEXui9diirXlogOrPKmsEn.jpg" alt="Deadpool ">
+                        <div class="DsMovie-card-description">
+                            <h3>Deadpool </h3>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div> 
+                </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/2UFxrUHVuSK3Tth7DvQQlF4mGTd.jpg" alt="Guardiões da Galáxia">
+                    <div class="DsMovie-card-description">
+                        <h3>Guardiões da Galáxia</h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/33wnBK5NxvuKQv0Cxo3wMv0eR7F.jpg" alt="Sem Saída ">
+                    <div class="DsMovie-card-description">
+                        <h3>Sem Saída </h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/usaZV7KB6Man9Rm9TyDAeQf7uVD.jpg" alt="Pânico ">
+                    <div class="DsMovie-card-description">
+                        <h3>Pânico </h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/TU9NIjwzjoKPwQHoHshkFcQUCG.jpg" alt="Parasita">
+                    <div class="DsMovie-card-description">
+                        <h3>Parasita</h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/n6bUvigpRFqSwmPp1m2YADdbRBc.jpg" alt="Coringa">
+                    <div class="DsMovie-card-description">
+                        <h3>Coringa</h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/iQFcwSGbZXMkeyKrxbPnwnRo5fl.jpg" alt="Homem-Aranha">
+                    <div class="DsMovie-card-description">
+                        <h3>Homem-Aranha: Sem Volta Para Casa</h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+
+                <div class="col-sm-6 col-l6-4 col-xl-3 mb-3">                    <div class="DsMovie-card">
+                    <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/3G1Q5xF40HkUBJXxt2DQgQzKTp5.jpg" alt="Encanto">
+                    <div class="DsMovie-card-description">
+                        <h3>Encanto</h3>
+                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                    </div>
+                </div> 
+            </div>
+                
             </div>
 
         </section>
-
    </main>
 </body>
 </html>
