--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,20 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/jBJWaqoSCiARWtfV0GlqHrcdidd.jpg" alt="The Witcher">
                         <div class="DsMovie-card-description">
                             <h3>The Witcher</h3>
-                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DsMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-half.svg" alt="">
+                                    <img src="img/star-empty.svg" alt="">
+                                </div>
+                                <p>10 Avaliações</p>
+
+
+                                <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
