Polimento de Listagem

--- a/Index.html
+++ b/Index.html
@@ -44,8 +44,6 @@
                                     <img src="img/star-empty.svg" alt="">
                                 </div>
                                 <p>10 Avaliações</p>
-
-
                                 <a class="DsMovie-btn" href="form.html">Avaliar</a>
                             </div>
                         </div>
@@ -57,7 +55,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/41yaWnIT8AjIHiULHtTbKNzZTjc.jpg" alt="The Flash">
                         <div class="DsMovie-card-description">
                             <h3>The Flash</h3>
-                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DsMovie-card-description-bottom">
+                                <h4>3.2</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-half.svg" alt="">
+                                    <img src="img/star-empty.svg" alt="">
+                                </div>
+                                <p>12 Avaliações</p>
+                                <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -66,7 +75,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/dK12GIdhGP6NPGFssK2Fh265jyr.jpg" alt="Alerta Vermelho">
                         <div class="DsMovie-card-description">
                             <h3>Alerta Vermelho</h3>
-                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DsMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-half.svg" alt="">
+                                    <img src="img/star-empty.svg" alt="">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -75,7 +95,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/mX3WOJPBzzl4kj4xU5lL7qfD6C3.jpg" alt="Batman">
                         <div class="DsMovie-card-description">
                             <h3>Batman vs Superman: A Origem da Justiça</h3>
-                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DsMovie-card-description-bottom">
+                                <h4>3.2</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-half.svg" alt="">
+                                    <img src="img/star-empty.svg" alt="">
+                                </div>
+                                <p>9 Avaliações</p>
+                                <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -84,7 +115,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/en971MEXui9diirXlogOrPKmsEn.jpg" alt="Deadpool ">
                         <div class="DsMovie-card-description">
                             <h3>Deadpool </h3>
-                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DsMovie-card-description-bottom">
+                                <h4>4.3</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-full.svg" alt="">
+                                    <img src="img/star-half.svg" alt="">
+                                </div>
+                                <p>15 Avaliações</p>
+                                <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -93,7 +135,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/2UFxrUHVuSK3Tth7DvQQlF4mGTd.jpg" alt="Guardiões da Galáxia">
                     <div class="DsMovie-card-description">
                         <h3>Guardiões da Galáxia</h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>2</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                            </div>
+                            <p>10 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
@@ -102,7 +155,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/33wnBK5NxvuKQv0Cxo3wMv0eR7F.jpg" alt="Sem Saída ">
                     <div class="DsMovie-card-description">
                         <h3>Sem Saída </h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>3.8</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-half.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                            </div>
+                            <p>10 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
@@ -111,7 +175,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/usaZV7KB6Man9Rm9TyDAeQf7uVD.jpg" alt="Pânico ">
                     <div class="DsMovie-card-description">
                         <h3>Pânico </h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>3.8</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-half.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                            </div>
+                            <p>10 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
@@ -120,7 +195,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/TU9NIjwzjoKPwQHoHshkFcQUCG.jpg" alt="Parasita">
                     <div class="DsMovie-card-description">
                         <h3>Parasita</h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>5</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                            </div>
+                            <p>12 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
@@ -129,7 +215,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/n6bUvigpRFqSwmPp1m2YADdbRBc.jpg" alt="Coringa">
                     <div class="DsMovie-card-description">
                         <h3>Coringa</h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>3</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                            </div>
+                            <p>6 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
@@ -138,7 +235,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/iQFcwSGbZXMkeyKrxbPnwnRo5fl.jpg" alt="Homem-Aranha">
                     <div class="DsMovie-card-description">
                         <h3>Homem-Aranha: Sem Volta Para Casa</h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>3.8</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-half.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                            </div>
+                            <p>7 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
@@ -147,7 +255,18 @@
                     <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/3G1Q5xF40HkUBJXxt2DQgQzKTp5.jpg" alt="Encanto">
                     <div class="DsMovie-card-description">
                         <h3>Encanto</h3>
-                        <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        <div class="DsMovie-card-description-bottom">
+                            <h4>4</h4>
+                            <div>
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-full.svg" alt="">
+                                <img src="img/star-empty.svg" alt="">
+                            </div>
+                            <p>5 Avaliações</p>
+                            <a class="DsMovie-btn" href="form.html">Avaliar</a>
+                        </div>
                     </div>
                 </div> 
             </div>
